# nodeify

./: .gitignore  README.md  TODO.md  pyproject.toml
examples/: bond.py  simple.py
nodeify/: __init__.py  _graph.py  _meta.py  _node.py  _observer.py
