[tool.poetry]
name = "nodeify"
version = "0.1.0"
description = "Observable dependency graph framework."
authors = ["jkitzler <0.chirp.sleeved@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.11.0"
pytest = "^8.1.1"
pendulum = "^3.0.0"
numpy = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin"
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "D",
    "DTZ",
    "E",
    "F",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"examples/**/*" = ["D"]
